tests/negative/gold/incomplete-string-interpolation3-test.gold
tests/negative/incomplete-string-interpolation3-test.toit:6:11: error: Incomplete string interpolation
  print "$
          ^
tests/negative/incomplete-string-interpolation3-test.toit:6:11: error: Unterminated string
  print "$
          ^
Compilation failed
